[ADD] data retriving

--- a/ARIMA_Asset_Price_Prediction/ARIMA_Price_Prediction.ipynb
+++ b/ARIMA_Asset_Price_Prediction/ARIMA_Price_Prediction.ipynb
@@ -2,6 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import MetaTrader5 as mt5\n",
+    "import pandas as pd\n",
+    "import ta.momentum as momentum\n",
+    "from datetime import datetime, timedelta\n",
+    "import time \n",
+    "\n",
+    "def get_historical_data(symbol, timeframe, number_of_data = 50):\n",
+    "    if not mt5.initialize():\n",
+    "        print(\"initialize() failed\")\n",
+    "        mt5.shutdown()\n",
+    "        return None\n",
+    "\n",
+    "    rates = mt5.copy_rates_from_pos(symbol, timeframe, 0, number_of_data)\n",
+    "\n",
+    "    if rates is None:\n",
+    "        print(\"Failed to retrieve historical data.\")\n",
+    "        mt5.shutdown()\n",
+    "        return None\n",
+    "\n",
+    "    df = pd.DataFrame(rates)\n",
+    "    df[\"time\"] = pd.to_datetime(df[\"time\"], unit= \"s\")\n",
+    "    df = df.set_index(\"time\")\n",
+    "\n",
+    "    mt5.shutdown()\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "data = get_historical_data(\"Volatility 25 Index\", mt5.TIMEFRAME_M15, number_of_data = 70000)\n",
+    "\n",
+    "data.to_csv(\"v25.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "def plot_candlestick_chart(csv_file_path):\n",
+    "    df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "    df['time'] = pd.to_datetime(df['time'])\n",
+    "\n",
+    "    fig = go.Figure(data=[go.Candlestick(x=df['time'],\n",
+    "    open=df['open'],\n",
+    "    high=df['high'],\n",
+    "    low=df['low'],\n",
+    "    close=df['close'])])\n",
+    "\n",
+    "    fig.update_layout(title='Candlestick Chart',\n",
+    "    xaxis_title='Time',\n",
+    "    yaxis_title='Price',\n",
+    "    xaxis_rangeslider_visible=False)\n",
+    "\n",
+    "    fig.show()\n",
+    "\n",
+    "csv_file_path = 'v25.csv'\n",
+    "plot_candlestick_chart(csv_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
