--- a/ARIMA_Asset_Price_Prediction/Arima_Price_Prediction.ipynb
+++ b/ARIMA_Asset_Price_Prediction/Arima_Price_Prediction.ipynb
@@ -33,9 +33,9 @@
     "\n",
     "    return df\n",
     "\n",
-    "data = get_historical_data(\"Volatility 25 Index\", mt5.TIMEFRAME_M15, number_of_data = 70000)\n",
+    "data = get_historical_data(\"Volatility 25 Index\", mt5.TIMEFRAME_H4, number_of_data = 70000)\n",
     "\n",
-    "data.to_csv(\"v25.csv\")"
+    "data.to_csv(\"v25_H4.csv\")"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"v25.csv\")"
+    "df = pd.read_csv(\"v25_H4.csv\")"
    ]
   },
   {
