--- a/ARIMA_Asset_Price_Prediction/Arima_Price_Prediction.ipynb
+++ b/ARIMA_Asset_Price_Prediction/Arima_Price_Prediction.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "    fig.show()\n",
     "\n",
-    "csv_file_path = 'v25.csv'\n",
+    "csv_file_path = 'v25_H4.csv'\n",
     "plot_candlestick_chart(csv_file_path)"
    ]
   },
