--- a/RSI_BOOM_SELL_STRATEGY/Documentation/Documentation.ipynb
+++ b/RSI_BOOM_SELL_STRATEGY/Documentation/Documentation.ipynb
@@ -53,7 +53,20 @@
     "import time\n",
     "\n",
     "def get_historical_data(symbol, timeframe, number_of_data=1000):\n",
-    "    \n",
+    "        \n",
+    "    \"\"\"\n",
+    "    Fetches historical OHLCV (Open, High, Low, Close, Volume) data for a specific trading symbol.\n",
+    "\n",
+    "    Parameters:\n",
+    "        symbol (str): The trading symbol to retrieve historical data.\n",
+    "        timeframe (int): The timeframe for historical data, e.g., mt5.TIMEFRAME_M1 for 1-minute data.\n",
+    "        number_of_data (int, optional): The number of historical data points to fetch. Default is 1000.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: DataFrame containing historical OHLCV data. The DataFrame has columns:\n",
+    "        'time', 'open', 'high', 'low', 'close', and 'tick_volume'.\n",
+    "    \"\"\"\n",
+    "\n",
     "    if not mt5.initialize():\n",
     "        print(\"initialize() failed ☢️\")\n",
     "        mt5.shutdown()\n",
@@ -75,6 +88,17 @@
     "    return df\n",
     "\n",
     "def calculate_rsi(df, period=14):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Calculates the Relative Strength Index (RSI) for a given DataFrame.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): DataFrame containing the 'close' price column.\n",
+    "        period (int, optional): The period for RSI calculation. Default is 14.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    \n",
     "    try:\n",
     "        rsi_indicator = momentum.RSIIndicator(df[\"close\"], window=period)\n",
@@ -105,6 +129,43 @@
     "    return i\n",
     "\n",
     "def execute_sell_trade(df, symbol, lot_size=0.2):\n",
+    "    \"\"\"\n",
+    "    Executes the RSI sell trade based on the given strategy conditions.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): DataFrame containing historical data, including RSI values.\n",
+    "        symbol (str): The trading symbol to execute the sell trade.\n",
+    "        lot_size (float, optional): The lot size for the sell trade. Default is 0.2.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "\n",
+    "    Explanation:\n",
+    "        The `execute_sell_trade` function implements the sell part of the RSI (Relative Strength Index) \n",
+    "        strategy based on specific conditions. The strategy aims to capture potential overbought market \n",
+    "        conditions using the RSI indicator. The sell trade is taken when the RSI value is above 70, and a \n",
+    "        particular candle pattern is observed.\n",
+    "\n",
+    "        Sell Conditions:\n",
+    "        1. RSI is above 70, indicating an overbought market.\n",
+    "        2. The candle two periods ago (confirmation candle) is green (close > open).\n",
+    "        3. The previous candle (immediate previous to the current candle) is red (close < open).\n",
+    "        4. The current candle (most recent) is also red (close < open).\n",
+    "\n",
+    "        Execution:\n",
+    "        Once all the sell conditions are met, a sell trade is executed at the current market price. The \n",
+    "        trade is taken on the next red candle after the green confirmation candle. This means that when all \n",
+    "        conditions are satisfied, the function opens a sell trade at the open price of the next red candle. \n",
+    "\n",
+    "        Exit:\n",
+    "        The trade remains open until the close of the second red candle after the confirmation candle. The \n",
+    "        exit time and exit price are recorded based on the close price of the second red candle.\n",
+    "\n",
+    "        Note:\n",
+    "        In a real trading scenario, additional risk management and stop-loss mechanisms should be \n",
+    "        implemented to mitigate potential losses.\n",
+    "\n",
+    "    \"\"\"\n",
     "    \n",
     "    current_bar = df.iloc[-1]\n",
     "    previous_bar = df.iloc[-2]\n",
@@ -154,6 +215,20 @@
     "\n",
     "def run_strategy(symbol, timeframe, lot_size=0.2, data_length=1000, period=14):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    Runs the RSI sell strategy on historical data for the specified symbol.\n",
+    "\n",
+    "    Parameters:\n",
+    "        symbol (str): The trading symbol to be used.\n",
+    "        timeframe (int): The timeframe for historical data, e.g., mt5.TIMEFRAME_M1 for 1-minute data.\n",
+    "        lot_size (float, optional): The lot size for the sell trades. Default is 0.2.\n",
+    "        data_length (int, optional): The number of historical data points to fetch. Default is 1000.\n",
+    "        period (int, optional): The period for RSI calculation. Default is 14.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "\n",
     "    while True:\n",
     "\n",
     "        try:\n",
