--- a/RSI_BOOM_SELL_STRATEGY/Documentation/Documentation.ipynb
+++ b/RSI_BOOM_SELL_STRATEGY/Documentation/Documentation.ipynb
@@ -41,6 +41,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\">\n",
+    "    <img src=\"../Source/image/flowchart.jpg\" alt=\"Flowchart\">\n",
+    "</p>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
