[add] half_life calculation

--- a/Statistical-Arb-Oculus/src/mectrics/check.ipynb
+++ b/Statistical-Arb-Oculus/src/mectrics/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "0.8743423458448341"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,6 +148,42 @@
     "df = calculate_correlation(closing_prices_asset_1, closing_prices_asset_2)\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Half-life of the spread/z-score: 0.69 periods\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "def calculate_half_life(time_series):\n",
+    "\n",
+    "    if not isinstance(time_series, np.ndarray):\n",
+    "        time_series = np.array(time_series)\n",
+    "\n",
+    "    delta_y = np.diff(time_series)\n",
+    "\n",
+    "    X = sm.add_constant(time_series[:-1])\n",
+    "\n",
+    "    model = sm.OLS(delta_y, X).fit()\n",
+    "\n",
+    "    half_life = -np.log(2) / model.params[1]\n",
+    "\n",
+    "    return half_life\n",
+    "\n",
+    "half_life = calculate_half_life(spread)\n",
+    "print(f\"Half-life of the spread/z-score: {half_life:.2f} periods\")\n"
    ]
   }
  ],
