[add] calculate hurst exponent

--- a/Statistical-Arb-Oculus/src/mectrics/check.ipynb
+++ b/Statistical-Arb-Oculus/src/mectrics/check.ipynb
@@ -185,6 +185,44 @@
     "half_life = calculate_half_life(spread)\n",
     "print(f\"Half-life of the spread/z-score: {half_life:.2f} periods\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hurst Exponent: 0.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hurst\n",
+    "\n",
+    "def calculate_hurst_exponent(time_series):\n",
+    "    \"\"\"\n",
+    "    Calculate the Hurst exponent of a time series using the \"hurst\" library.\n",
+    "\n",
+    "    Args:\n",
+    "        time_series (numpy.ndarray or pandas.Series): The time series data.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The estimated Hurst exponent.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not isinstance(time_series, np.ndarray):\n",
+    "        time_series = np.array(time_series)\n",
+    "\n",
+    "    H, _, _ = hurst.compute_Hc(time_series, kind='change', simplified=True)\n",
+    "\n",
+    "    return H\n",
+    "\n",
+    "hurst = calculate_hurst_exponent(spread)\n",
+    "print(f\"Hurst Exponent: {hurst:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
