[add] calculate_cointegration

--- a/Statistical-Arb-Oculus/src/mectrics/check.ipynb
+++ b/Statistical-Arb-Oculus/src/mectrics/check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "0.8743423458448341"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +222,42 @@
     "\n",
     "hurst = calculate_hurst_exponent(spread)\n",
     "print(f\"Hurst Exponent: {hurst:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate_cointegration(closing_prices_asset_1, closing_prices_asset_2):\n",
+    "\n",
+    "    if isinstance(closing_prices_asset_1, pd.Series):\n",
+    "        closing_prices_asset_1 = closing_prices_asset_1.values\n",
+    "    if isinstance(closing_prices_asset_2, pd.Series):\n",
+    "        closing_prices_asset_2 = closing_prices_asset_2.values\n",
+    "\n",
+    "    result = sm.OLS(closing_prices_asset_1, sm.add_constant(closing_prices_asset_2)).fit()\n",
+    "\n",
+    "    p_value = sm.tsa.adfuller(result.resid)[1]\n",
+    "\n",
+    "    # Return True if cointegrated (p-value < 0.05), else False\n",
+    "    return p_value < 0.05\n",
+    "\n",
+    "\n",
+    "df = calculate_cointegration(closing_prices_asset_1, closing_prices_asset_2)\n",
+    "df"
    ]
   }
  ],
