[ADD] add type to variables and function

--- a/Statistical-Arb-Oculus/src/mectrics/check.ipynb
+++ b/Statistical-Arb-Oculus/src/mectrics/check.ipynb
@@ -307,6 +307,178 @@
     "df = calculate_cointegration(closing_prices_asset_1, closing_prices_asset_2)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## All (old)\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from math import log\n",
+    "from scipy.stats import pearsonr\n",
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "import statsmodels.tsa.stattools as ts\n",
+    "import statsmodels.api as sm\n",
+    "import hurst\n",
+    "\n",
+    "def calculate_correlation(closing_prices_asset_1, closing_prices_asset_2):\n",
+    "    \"\"\"\n",
+    "    Calculate the correlation coefficient between two assets based on their closing prices.\n",
+    "    \n",
+    "    Args:\n",
+    "        closing_prices_asset_1 (pandas.Series): Closing prices of the first asset.\n",
+    "        closing_prices_asset_2 (pandas.Series): Closing prices of the second asset.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The correlation coefficient between the closing prices of the two assets.\n",
+    "    \"\"\"\n",
+    "    correlation_coefficient, _ = pearsonr(closing_prices_asset_1, closing_prices_asset_2)\n",
+    "    \n",
+    "    return correlation_coefficient\n",
+    "\n",
+    "def calculate_cointegration(closing_prices_asset_1, closing_prices_asset_2):\n",
+    "    \"\"\"\n",
+    "    Perform the Engle-Granger cointegration test between two time series.\n",
+    "\n",
+    "    Args:\n",
+    "        closing_prices_asset_1 (numpy.ndarray or pandas.Series): The first time series.\n",
+    "        closing_prices_asset_2 (numpy.ndarray or pandas.Series): The second time series.\n",
+    "\n",
+    "    Returns:\n",
+    "        bool: True if cointegrated, False otherwise.\n",
+    "        float: The p-value of the test.\n",
+    "    \"\"\"\n",
+    "    if isinstance(closing_prices_asset_1, pd.Series):\n",
+    "        closing_prices_asset_1 = closing_prices_asset_1.values\n",
+    "    if isinstance(closing_prices_asset_2, pd.Series):\n",
+    "        closing_prices_asset_2 = closing_prices_asset_2.values\n",
+    "\n",
+    "    result = sm.OLS(closing_prices_asset_1, sm.add_constant(closing_prices_asset_2)).fit()\n",
+    "\n",
+    "    p_value = sm.tsa.adfuller(result.resid)[1]\n",
+    "\n",
+    "    # Return True if cointegrated (p-value < 0.05)\n",
+    "    return p_value < 0.05\n",
+    "\n",
+    "def calculate_spread(closing_prices_asset_1, closing_prices_asset_2):\n",
+    "    \"\"\"\n",
+    "    Calculate the spread between two assets based on their returns.\n",
+    "    \n",
+    "    Args:\n",
+    "        closing_prices_asset_1 (pandas.Series): Closing prices of the first asset.\n",
+    "        closing_prices_asset_2 (pandas.Series): Closing prices of the second asset.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list: A list representing the spread between the two assets based on returns.\n",
+    "    \"\"\"\n",
+    "    if len(closing_prices_asset_1) != len(closing_prices_asset_2):\n",
+    "        raise ValueError(\"Input lists must have the same length\")\n",
+    "    \n",
+    "    returns_asset_1 = np.diff(closing_prices_asset_1) / closing_prices_asset_1[:-1]\n",
+    "    returns_asset_2 = np.diff(closing_prices_asset_2) / closing_prices_asset_2[:-1]\n",
+    "\n",
+    "    spread = [a - b for a, b in zip(returns_asset_1, returns_asset_2)]\n",
+    "\n",
+    "    return spread\n",
+    "\n",
+    "def calculate_zscore(spread):\n",
+    "    \"\"\"\n",
+    "    Calculate the Z-score of a spread.\n",
+    "    \n",
+    "    Args:\n",
+    "        spread (list): A list representing the spread between two assets.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list: Z-scores for the spread data.\n",
+    "    \"\"\"\n",
+    "    mean_spread = np.mean(spread)\n",
+    "    std_dev_spread = np.std(spread)\n",
+    "    z_scores = [(x - mean_spread) / std_dev_spread for x in spread]\n",
+    "    \n",
+    "    return z_scores\n",
+    "\n",
+    "def hedge_ratio(closing_prices_asset_2, closing_prices_asset_1):\n",
+    "    \"\"\"\n",
+    "    Calculate the hedge ratio for two assets.\n",
+    "    \n",
+    "    Args:\n",
+    "        closing_prices_asset_2 (pandas.Series): Closing prices of the second asset.\n",
+    "        closing_prices_asset_1 (pandas.Series): Closing prices of the first asset.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The hedge ratio.\n",
+    "    \"\"\"\n",
+    "    closing_prices_asset_1 = sm.add_constant(closing_prices_asset_1)\n",
+    "    model = sm.OLS(closing_prices_asset_2, closing_prices_asset_1).fit()\n",
+    "\n",
+    "    return model.params[1]\n",
+    "\n",
+    "def is_stationary(spread, significance_level=0.05):\n",
+    "    \"\"\"\n",
+    "    Check the stationarity of a spread using the Augmented Dickey-Fuller (ADF) test.\n",
+    "    \n",
+    "    Args:\n",
+    "        spread (list): A list representing the spread between two assets.\n",
+    "        significance_level (float): The significance level for the ADF test.\n",
+    "    \n",
+    "    Returns:\n",
+    "        bool: True if the spread is stationary, False otherwise.\n",
+    "    \"\"\"\n",
+    "    result = adfuller(spread)\n",
+    "    p_value = result[1]\n",
+    "\n",
+    "    if p_value <= significance_level:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def calculate_half_life(time_series):\n",
+    "    \"\"\"\n",
+    "    Calculate the half-life of a mean-reverting time series.\n",
+    "\n",
+    "    Args:\n",
+    "        time_series (numpy.ndarray or pandas.Series): The time series data.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The estimated half-life.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(time_series, np.ndarray):\n",
+    "        time_series = np.array(time_series)\n",
+    "\n",
+    "    delta_y = np.diff(time_series)\n",
+    "\n",
+    "    X = sm.add_constant(time_series[:-1])\n",
+    "\n",
+    "    model = sm.OLS(delta_y, X).fit()\n",
+    "\n",
+    "    half_life = -np.log(2) / model.params[1]\n",
+    "\n",
+    "    return half_life\n",
+    "\n",
+    "\n",
+    "def calculate_hurst_exponent(time_series):\n",
+    "    \"\"\"\n",
+    "    Calculate the Hurst exponent of a time series using the \"hurst\" library.\n",
+    "\n",
+    "    Args:\n",
+    "        time_series (numpy.ndarray or pandas.Series): The time series data.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The estimated Hurst exponent.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if not isinstance(time_series, np.ndarray):\n",
+    "        time_series = np.array(time_series)\n",
+    "\n",
+    "    H, _, _ = hurst.compute_Hc(time_series, kind='change', simplified=True)\n",
+    "\n",
+    "    return H\n"
+   ]
   }
  ],
  "metadata": {
